<resources>
    <string name="app_name">Inventario_AC_PT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_venta">Administracion de Ventas</string>
    <string name="menu_compra">Administracion de Compras</string>
    <string name="menu_proveedor">Administracion de Proveedores</string>
    <string name="menu_producto">Administracion de Productos</string>
    <string name="menu_cliente">Administracion de Clientes</string>
    <string name="menu_Vendedor">Administracion de Vendedores</string>

    <string name="alta">Alta</string>
    <string name="baja">Baja</string>
    <string name="mod">Modificar</string>
    <string name="buscar">Buscar</string>
    <string name="lista">Listado</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>